--- a/recovery/root/init.recovery.mt6765.rc
+++ b/recovery/root/init.recovery.mt6765.rc
@@ -15,4 +15,16 @@ on post-fs
     symlink /dev/block/mmcblk0boot0 /dev/block/platform/bootdevice/by-name/preloader_a
     symlink /dev/block/mmcblk0boot1 /dev/block/platform/bootdevice/by-name/preloader_b
 
-    exec u:r:update_engine:s0 root root -- /system/bin/mtk_plpath_utils
+exec u:r:update_engine:s0 root root -- /system/bin/mtk_plpath_utils
+
+service mtk.plpath.utils.link /system/bin/mtk_plpath_utils
+    class main
+    user root
+    group root system
+    disabled
+    oneshot
+    seclabel u:r:recovery:s0
+
+on boot
+     start boot-hal-1-2
+     start health-hal-2-1
